--- a/count_accuracy.ipynb
+++ b/count_accuracy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "2dfec0f1",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "id": "9f96ca79",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
     "  kp_b, desc_b = orb.detectAndCompute(img2, None)\n",
     "  bf = cv2.BFMatcher(cv2.NORM_HAMMING, crossCheck=True)\n",
     "  matches = bf.match(desc_a, desc_b)\n",
-    "  similar_regions = [i for i in matches if i.distance < 30]  \n",
+    "  similar_regions = [i for i in matches if i.distance < 41]  \n",
     "  if len(matches) == 0:\n",
     "    return 0\n",
     "  return len(similar_regions) / len(matches)\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "id": "790c4eb0",
    "metadata": {},
    "outputs": [
@@ -46,8 +46,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average similarity ORB = 76.17 %\n",
-      "Average similarity SSIM = 81.12 %\n"
+      "Baseline: Average similarity ORB = 90.16 %\n",
+      "Baseline: Average similarity SSIM = 81.12 %\n"
      ]
     }
    ],
@@ -67,14 +67,49 @@
     "    orb_sum += orb_sim(img1, img2)\n",
     "    ssim_sum += structural_sim(img1, img3)\n",
     "    \n",
-    "print(\"Average similarity ORB = \" + str(round(orb_sum / count * 100, 2)) + ' %')\n",
-    "print(\"Average similarity SSIM = \" + str(round(ssim_sum / count * 100, 2)) + ' %')"
+    "print(\"Baseline: Average similarity ORB = \" + str(round(orb_sum / count * 100, 2)) + ' %')\n",
+    "print(\"Baseline: Average similarity SSIM = \" + str(round(ssim_sum / count * 100, 2)) + ' %')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "be3fb4cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final: Average similarity ORB = 82.38 %\n",
+      "Final: Average similarity SSIM = 85.86 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "orb_sum , ssim_sum , count = 0, 0, 0\n",
+    "path = \"C:\\\\Users\\\\user\\\\Desktop\\\\CSCI-494\\\\image\\\\report\"\n",
+    "dir_list = os.listdir(path)\n",
+    "for my_dir in dir_list:\n",
+    "    img = []\n",
+    "    for x in os.listdir(path + '\\\\' + my_dir):\n",
+    "        img.append(x)\n",
+    "        \n",
+    "    img1 = cv2.imread(path + '\\\\' + my_dir + '\\\\' + img[0], 0)\n",
+    "    img2 = cv2.imread(path + '\\\\' + my_dir + '\\\\' + img[1], 0)\n",
+    "    img3 = resize(img2, (img1.shape[0], img1.shape[1]), anti_aliasing=True, preserve_range=True)\n",
+    "    count += 1\n",
+    "    orb_sum += orb_sim(img1, img2)\n",
+    "    ssim_sum += structural_sim(img1, img3)\n",
+    "    \n",
+    "print(\"Final: Average similarity ORB = \" + str(round(orb_sum / count * 100, 2)) + ' %')\n",
+    "print(\"Final: Average similarity SSIM = \" + str(round(ssim_sum / count * 100, 2)) + ' %')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be3fb4cc",
+   "id": "329d8ea4",
    "metadata": {},
    "outputs": [],
    "source": []
